2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Add forgotten ClutterGroup API.

2007-01-18  Matthew Allum  <mallum@openedhand.com>

	* clutter-docs.sgml:
	Update overview.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter-docs.sgml: added clutter-fixed
	* tmpl/clutter-fixed.sgml: added intro to fixed point math
	
2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Remove old cruft.

	* clutter-docs.sgml: Add index of symbols.

	* tmpl/clutter-fixed.sgml: Fix doc template.

2007-01-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Remove clutter_vblank_method(): it's
	private.

2007-01-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Update.

	* tmpl/*.sgml: Update templates.

2006-12-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Update; add clutter_color_equal().

	* tmpl/clutter-color.sgml: Update template.

2006-12-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Update.

	* tmpl/*.sgml: Update the templates.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Update with the newly added API.

	* tmpl/clutter-event.sgml:
	* tmpl/clutter-fixed.sgml: Provide short and long descriptions.

	* tmpl/clutter-actor.sgml:
	* tmpl/clutter-alpha.sgml:
	* tmpl/clutter-behaviour-path.sgml:
	* tmpl/clutter-behaviour-scale.sgml:
	* tmpl/clutter-color.sgml:
	* tmpl/clutter-feature.sgml:
	* tmpl/clutter-main.sgml: Update templates.

2006-11-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Remove debug macros; add clutter-version
	section.

	* Makefile.am: Ignore the stamp files.

	* clutter-docs.sgml: Add a link to the version utils.

	* tmpl/clutter-actor.sgml:
	* tmpl/clutter-main.sgml:
	* tmpl/clutter-version.sgml: Update templates.

2006-11-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-sections.txt: Move stuff around: get_type and Private